--- a/package.json
+++ b/package.json
@@ -29,19 +29,27 @@
   },
   "scripts": {
     "build": "tsc && vite build",
-    "prepare": "npm run build",
     "lint": "npm run lint:eslint",
     "lint:fix": "npm run lint:eslint:fix",
     "lint:eslint": "eslint \"**/*.{ts,tsx}\"",
     "lint:eslint:fix": "eslint --fix \"**/*.{ts,tsx}\"",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "storybook": "storybook dev -p 6006 --no-open",
+    "storybook:build": "storybook build"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.0.2",
+    "@storybook/addon-interactions": "7.0.2",
+    "@storybook/addon-links": "7.0.2",
+    "@storybook/blocks": "7.0.2",
+    "@storybook/react": "7.0.2",
+    "@storybook/react-vite": "7.0.2",
+    "@storybook/testing-library": "0.0.14-next.2",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "5.57.1",
@@ -52,9 +60,12 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "0.6.11",
     "prettier": "2.8.7",
+    "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "storybook": "7.0.2",
     "typescript": "5.0.3",
     "vite": "4.2.1",
     "vite-plugin-dts": "2.2.0"
