Run tsc before building Storybook

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "storybook": "storybook dev -p 6006 --no-open",
-    "storybook:build": "storybook build"
+    "storybook:build": "tsc && storybook build"
   },
   "peerDependencies": {
     "react": "^18",
