--- a/package.json
+++ b/package.json
@@ -29,32 +29,41 @@
   },
   "scripts": {
     "build": "tsc && vite build",
+    "test": "npm run test:storybook:standalone",
+    "test:storybook": "JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
+    "test:storybook:watch": "test-storybook --watch",
+    "test:storybook:standalone": "concurrently -k -s first -n SB,TEST -c magenta,blue \"npm run storybook:build --quiet && npx serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && npm run test:storybook\"",
     "lint": "npm run lint:eslint",
     "lint:fix": "npm run lint:eslint:fix",
-    "lint:eslint": "eslint \"**/*.{ts,tsx}\"",
+    "lint:eslint": "eslint -f json -o ./reports/lint-report-eslint.json \"**/*.{ts,tsx}\"",
     "lint:eslint:fix": "eslint --fix \"**/*.{ts,tsx}\"",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "storybook": "storybook dev -p 6006 --no-open",
-    "storybook:build": "tsc && storybook build"
+    "storybook:build": "tsc && storybook build",
+    "clean": "rm -rf dist storybook-static reports"
   },
   "peerDependencies": {
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "7.0.2",
     "@storybook/addon-essentials": "7.0.2",
     "@storybook/addon-interactions": "7.0.2",
     "@storybook/addon-links": "7.0.2",
     "@storybook/blocks": "7.0.2",
     "@storybook/react": "7.0.2",
     "@storybook/react-vite": "7.0.2",
+    "@storybook/test-runner": "0.10.0",
     "@storybook/testing-library": "0.0.14-next.2",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "5.57.1",
     "@typescript-eslint/parser": "5.57.1",
     "@vitejs/plugin-react": "3.1.0",
+    "axe-playwright": "1.2.3",
+    "concurrently": "8.0.1",
     "eslint": "8.37.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
@@ -65,6 +74,7 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "serve": "14.2.0",
     "storybook": "7.0.2",
     "typescript": "5.0.3",
     "vite": "4.2.1",
