--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
         with:
           node-version-file: ".nvmrc"
       - run: npm ci
-      - run: npm run lint
+      - run: npm run lint:report
       - uses: actions/upload-artifact@v3
         with:
           name: reports
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version-file: ".nvmrc"
       - run: npm ci
-      - run: npm run test
+      - run: npm run test:report
       - uses: actions/upload-artifact@v3
         with:
           name: reports
