--- a/package.json
+++ b/package.json
@@ -30,13 +30,21 @@
   "scripts": {
     "build": "tsc && vite build",
     "test": "npm run test:storybook:standalone",
-    "test:storybook": "JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
+    "test:report": "npm run test:storybook:standalone:report",
+    "test:storybook": "test-storybook",
     "test:storybook:watch": "test-storybook --watch",
+    "test:storybook:report": "JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
     "test:storybook:standalone": "concurrently -k -s first -n SB,TEST -c magenta,blue \"npm run storybook:build --quiet && npx serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && npm run test:storybook\"",
-    "lint": "npm run lint:eslint",
-    "lint:fix": "npm run lint:eslint:fix",
-    "lint:eslint": "eslint -f json -o ./reports/lint-report-eslint.json \"**/*.{ts,tsx}\"",
+    "test:storybook:standalone:report": "concurrently -k -s first -n SB,TEST -c magenta,blue \"npm run storybook:build --quiet && npx serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && npm run test:storybook:report\"",
+    "lint": "npm run lint:eslint && npm run lint:stylelint",
+    "lint:report": "npm run lint:eslint:report && npm run lint:stylelint:report",
+    "lint:fix": "npm run lint:eslint:fix && npm run lint:stylelint:fix",
+    "lint:eslint": "eslint \"**/*.{ts,tsx}\"",
+    "lint:eslint:report": "eslint -f json -o ./reports/lint-report-eslint.json \"**/*.{ts,tsx}\"",
     "lint:eslint:fix": "eslint --fix \"**/*.{ts,tsx}\"",
+    "lint:stylelint": "stylelint \"**/*.css\" ",
+    "lint:stylelint:report": "stylelint -f json -o ./reports/lint-report-stylelint.json \"**/*.css\" ",
+    "lint:stylelint:fix": "stylelint \"**/*.css\" --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "storybook": "storybook dev -p 6006 --no-open",
@@ -76,6 +84,9 @@
     "react-dom": "18.2.0",
     "serve": "14.2.0",
     "storybook": "7.0.2",
+    "stylelint": "15.4.0",
+    "stylelint-config-idiomatic-order": "9.0.0",
+    "stylelint-config-standard": "32.0.0",
     "typescript": "5.0.3",
     "vite": "4.2.1",
     "vite-plugin-dts": "2.2.0"
