Don't watch on default

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "build": "tsc && vite build",
     "test": "npm run test:vitest && npm run test:storybook:standalone",
     "test:report": "npm run test:vitest:report && npm run test:storybook:standalone:report",
-    "test:vitest": "vitest",
+    "test:vitest": "vitest run",
+    "test:vitest:watch": "vitest",
     "test:vitest:report": "vitest run --coverage --reporter default --reporter junit --outputFile ./reports/test-report-vitest.xml",
     "test:storybook": "test-storybook",
     "test:storybook:watch": "test-storybook --watch",
