Add snapshot testing

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test:vitest": "vitest run",
     "test:vitest:watch": "vitest",
     "test:vitest:report": "vitest run --coverage --reporter default --reporter junit --outputFile ./reports/test-report-vitest.xml",
+    "test:vitest:update": "vitest run --update",
     "test:storybook": "test-storybook",
     "test:storybook:watch": "test-storybook --watch",
     "test:storybook:report": "JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
@@ -90,6 +91,7 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-test-renderer": "18.2.0",
     "serve": "14.2.0",
     "storybook": "7.0.2",
     "stylelint": "15.4.0",
