--- a/package.json
+++ b/package.json
@@ -60,15 +60,16 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "7.0.2",
-    "@storybook/addon-essentials": "7.0.2",
-    "@storybook/addon-interactions": "7.0.2",
-    "@storybook/addon-links": "7.0.2",
-    "@storybook/blocks": "7.0.2",
-    "@storybook/react": "7.0.2",
-    "@storybook/react-vite": "7.0.2",
+    "@storybook/addon-a11y": "7.0.5",
+    "@storybook/addon-essentials": "7.0.5",
+    "@storybook/addon-interactions": "7.0.5",
+    "@storybook/addon-links": "7.0.5",
+    "@storybook/addon-mdx-gfm": "7.0.5",
+    "@storybook/blocks": "7.0.5",
+    "@storybook/react": "7.0.5",
+    "@storybook/react-vite": "7.0.5",
     "@storybook/test-runner": "0.10.0",
-    "@storybook/testing-library": "0.0.14-next.2",
+    "@storybook/testing-library": "0.1.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -93,7 +94,7 @@
     "react-dom": "18.2.0",
     "react-test-renderer": "18.2.0",
     "serve": "14.2.0",
-    "storybook": "7.0.2",
+    "storybook": "7.0.5",
     "stylelint": "15.4.0",
     "stylelint-config-idiomatic-order": "9.0.0",
     "stylelint-config-standard": "32.0.0",
