--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,23 +13,23 @@ jobs:
       - uses: google-github-actions/release-please-action@v3
         id: release
         with:
-          command: manifest-pr
+          command: manifest
           monorepo-tags: true
       - uses: actions/checkout@v3
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.release_created }}
       - uses: pnpm/action-setup@v2.2.4
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.release_created }}
       - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
           cache: "pnpm"
           registry-url: "https://registry.npmjs.org"
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.release_created }}
       - run: pnpm install
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.release_created }}
       - run: pnpm run build
-        if: ${{ steps.release.outputs.releases_created }}
-      - run: pnpm publish
+        if: ${{ steps.release.outputs.release_created }}
+      - run: pnpm run publish:npm
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.release_created }}
