--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -21,6 +21,9 @@
     "CHANGELOG.md"
   ],
   "packageManager": "pnpm@8.6.5",
+  "scripts": {
+    "publish:npm": "pnpm publish --access public"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
