--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -20,5 +20,8 @@
     "*.json",
     "CHANGELOG.md"
   ],
-  "packageManager": "pnpm@8.6.5"
+  "packageManager": "pnpm@8.6.5",
+  "scripts": {
+    "publish:npm": "pnpm publish --access public"
+  }
 }
