chore: Add missing publish script

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "upgrade": "ncu -ui && ncu -ui --packageFile **/packages/**/package.json && ncu -ui --packageFile **/apps/**/package.json",
-    "publish:npm": "turbo run publish:npm"
+    "publish:npm": "pnpm publish && turbo run publish:npm"
   },
   "devDependencies": {
     "@themeless-ui/eslint-config": "workspace:*",
