--- a/apps/react-example/package.json
+++ b/apps/react-example/package.json
@@ -18,7 +18,7 @@
     "dist",
     "CHANGELOG.md"
   ],
-  "packageManager": "pnpm@8.6.5",
+  "packageManager": "pnpm@8.6.10",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -44,33 +44,33 @@
     "publish:npm": "pnpm publish --access public"
   },
   "dependencies": {
-    "@fontsource/fira-mono": "5.0.3",
-    "@fontsource/karma": "5.0.3",
-    "@fontsource/open-sans": "5.0.3",
+    "@fontsource/fira-mono": "5.0.5",
+    "@fontsource/karma": "5.0.5",
+    "@fontsource/open-sans": "5.0.5",
     "@themeless-ui/react": "workspace:*",
     "@themeless-ui/style": "workspace:*",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/stylelint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
     "@types/react-test-renderer": "18.0.0",
-    "@vitejs/plugin-react": "4.0.1",
-    "@vitest/coverage-v8": "0.32.2",
-    "eslint": "8.43.0",
+    "@vitejs/plugin-react": "4.0.3",
+    "@vitest/coverage-v8": "0.33.0",
+    "eslint": "8.45.0",
     "jsdom": "22.1.0",
     "react-test-renderer": "18.2.0",
-    "stylelint": "15.9.0",
+    "stylelint": "15.10.2",
     "typescript": "5.1.6",
-    "vite-plugin-dts": "3.0.0-beta.3",
-    "vite": "4.3.9",
-    "vitest": "0.32.2"
+    "vite-plugin-dts": "3.3.1",
+    "vite": "4.4.6",
+    "vitest": "0.33.0"
   }
 }
