--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,7 +29,7 @@
     "dist",
     "CHANGELOG.md"
   ],
-  "packageManager": "pnpm@8.6.5",
+  "packageManager": "pnpm@8.6.10",
   "scripts": {
     "build": "vite build",
     "test": "pnpm run test:vitest",
@@ -57,22 +57,22 @@
     "@themeless-ui/utils": "workspace:*"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
-    "@types/react-dom": "18.2.6",
+    "@types/react-dom": "18.2.7",
     "@types/react-test-renderer": "18.0.0",
-    "@types/react": "18.2.14",
-    "@vitejs/plugin-react": "4.0.1",
-    "@vitest/coverage-v8": "0.32.2",
-    "eslint": "8.43.0",
+    "@types/react": "18.2.15",
+    "@vitejs/plugin-react": "4.0.3",
+    "@vitest/coverage-v8": "0.33.0",
+    "eslint": "8.45.0",
     "jsdom": "22.1.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.1.6",
-    "vite-plugin-dts": "3.0.0-beta.3",
-    "vite": "4.3.9",
-    "vitest": "0.32.2"
+    "vite-plugin-dts": "3.3.1",
+    "vite": "4.4.6",
+    "vitest": "0.33.0"
   }
 }
