--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -28,7 +28,7 @@
     "dist",
     "CHANGELOG.md"
   ],
-  "packageManager": "pnpm@8.6.5",
+  "packageManager": "pnpm@8.6.10",
   "scripts": {
     "build": "vite build",
     "test": "pnpm run test:vitest",
@@ -51,11 +51,11 @@
   "devDependencies": {
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
-    "@vitest/coverage-v8": "0.32.2",
-    "eslint": "8.43.0",
+    "@vitest/coverage-v8": "0.33.0",
+    "eslint": "8.45.0",
     "typescript": "5.1.6",
-    "vite-plugin-dts": "3.0.0-beta.3",
-    "vite": "4.3.9",
-    "vitest": "0.32.2"
+    "vite-plugin-dts": "3.3.1",
+    "vite": "4.4.6",
+    "vitest": "0.33.0"
   }
 }
