--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -15,9 +15,8 @@
     "url": "https://github.com/jtiala/themeless-ui",
     "directory": "packages/eslint-config"
   },
-  "main": "index.json",
   "files": [
-    "index.json",
+    "*.json",
     "CHANGELOG.md"
   ],
   "packageManager": "pnpm@8.6.10",
@@ -27,11 +26,12 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "6.1.0",
     "@typescript-eslint/parser": "6.1.0",
+    "eslint-config-next": "13.4.12",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-turbo": "1.10.9",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react": "7.33.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "0.6.13"
   }
 }
