--- a/packages/style/.eslintrc.json
+++ b/packages/style/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "extends": ["@themeless-ui/eslint-config"],
+  "extends": ["@themeless-ui/eslint-config/vite.json"],
   "env": {
     "browser": true,
     "es2022": true
