--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.7",
     "@commitlint/config-conventional": "17.6.7",
+    "@playwright/test": "^1.36.2",
     "@themeless-ui/eslint-config": "workspace:*",
     "eslint": "8.45.0",
     "husky": "8.0.3",
