--- a/apps/nextjs-example/package.json
+++ b/apps/nextjs-example/package.json
@@ -56,14 +56,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.36.2",
+    "@playwright/test": "1.36.2",
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/stylelint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
     "@types/mdx": "2.0.5",
-    "@types/react": "18.2.15",
+    "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
-    "eslint": "8.45.0",
+    "eslint": "8.46.0",
     "stylelint": "15.10.2",
     "typescript": "5.1.6"
   }
