--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "packageManager": "pnpm@8.6.10",
   "scripts": {
-    "dev": "turbo run dev --no-cache --continue",
+    "dev": "turbo run dev --no-cache --continue --concurrency=12",
     "build": "turbo run build",
     "preview": "turbo run preview",
     "test": "turbo run test",
