docs: revert change in storybook package imports

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -43,6 +43,8 @@
     "publish:npm": "pnpm publish --access public"
   },
   "dependencies": {
+    "@themeless-ui/react": "workspace:*",
+    "@themeless-ui/style": "workspace:*",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
