--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
         id: release
         with:
           command: manifest
+          release-type: node
           monorepo-tags: true
       - uses: actions/checkout@v3
         if: ${{ steps.release.outputs.release_created }}
