--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -2,6 +2,7 @@
   ".": "0.5.0",
   "apps/docs": "0.5.0",
   "apps/react-example": "0.5.0",
+  "apps/nextjs-example": "0.0.0",
   "packages/eslint-config": "0.5.0",
   "packages/react": "0.5.0",
   "packages/style": "0.5.0",
