--- a/release-please-config.json
+++ b/release-please-config.json
@@ -14,6 +14,10 @@
       "component": "@themeless-ui/react-example",
       "bump-minor-pre-major": true
     },
+    "apps/nextjs-example": {
+      "component": "@themeless-ui/nextjs-example",
+      "bump-minor-pre-major": true
+    },
     "packages/eslint-config": {
       "component": "@themeless-ui/eslint-config",
       "bump-minor-pre-major": true
