chore: remove typescript files from css packages

--- a/packages/style/tsconfig.json
+++ b/packages/style/tsconfig.json
@@ -1,4 +1,3 @@
 {
-  "extends": "@themeless-ui/typescript-config/vite-react.json",
-  "include": ["src"]
+  "extends": "@themeless-ui/typescript-config/vite-react.json"
 }
