--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -30,8 +30,10 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-config-turbo": "1.10.14",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-lit": "1.9.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-storybook": "0.6.14"
+    "eslint-plugin-storybook": "0.6.14",
+    "eslint-plugin-wc": "2.0.4"
   }
 }
