chore: add vite.config.ts to ts configurations wherever plausible

--- a/apps/react-example/tsconfig.json
+++ b/apps/react-example/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@themeless-ui/typescript-config/vite-react.json",
-  "include": ["src"],
+  "include": ["src", "vite.config.ts"],
   "exclude": ["src/**/*.test.{ts,tsx}"]
 }
