test: configure stricter a11y rules

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -26,11 +26,12 @@
     "preview": "serve storybook-static",
     "test": "pnpm run test:storybook:standalone",
     "test:report": "pnpm run test:storybook:standalone:report",
-    "test:storybook": "test-storybook",
-    "test:storybook:watch": "test-storybook --watch",
-    "test:storybook:report": "JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
-    "test:storybook:standalone": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && npx serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook\"",
-    "test:storybook:standalone:report": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && npx serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook:report\"",
+    "test:storybook:prepare": "pnpm exec playwright install --with-deps",
+    "test:storybook": "pnpm run test:storybook:prepare && test-storybook",
+    "test:storybook:watch": "pnpm run test:storybook:prepare && test-storybook --watch",
+    "test:storybook:report": "pnpm run test:storybook:prepare && JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
+    "test:storybook:standalone": "pnpm run test:storybook:prepare && concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook\"",
+    "test:storybook:standalone:report": "pnpm run test:storybook:prepare && concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook:report\"",
     "lint": "pnpm run lint:tsc && pnpm run lint:eslint",
     "lint:report": "pnpm run lint:tsc:report && pnpm run lint:eslint:report",
     "lint:fix": "pnpm run lint:eslint:fix",
@@ -49,25 +50,26 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "7.5.2",
-    "@storybook/addon-essentials": "7.5.2",
-    "@storybook/addon-interactions": "7.5.2",
-    "@storybook/addon-links": "7.5.2",
-    "@storybook/blocks": "7.5.2",
-    "@storybook/react-vite": "7.5.2",
-    "@storybook/react": "7.5.2",
-    "@storybook/test-runner": "0.13.0",
-    "@storybook/testing-library": "0.2.2",
+    "@storybook/addon-a11y": "7.5.3",
+    "@storybook/addon-essentials": "7.5.3",
+    "@storybook/addon-interactions": "7.5.3",
+    "@storybook/addon-links": "7.5.3",
+    "@storybook/blocks": "7.5.3",
+    "@storybook/react": "7.5.3",
+    "@storybook/react-vite": "7.5.3",
+    "@storybook/test-runner": "0.15.2",
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
-    "@types/react-dom": "18.2.14",
     "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "axe-core": "4.8.2",
     "axe-playwright": "1.2.3",
     "concurrently": "8.2.2",
     "eslint": "8.52.0",
     "serve": "14.2.1",
-    "storybook": "7.5.2",
+    "storybook": "7.5.3",
     "typescript": "5.2.2",
-    "vite": "4.5.0"
+    "vite": "4.5.0",
+    "wait-on": "7.2.0"
   }
 }
