test: remove duplicate prepare script

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -30,8 +30,8 @@
     "test:storybook": "pnpm run test:storybook:prepare && test-storybook",
     "test:storybook:watch": "pnpm run test:storybook:prepare && test-storybook --watch",
     "test:storybook:report": "pnpm run test:storybook:prepare && JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
-    "test:storybook:standalone": "pnpm run test:storybook:prepare && concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook\"",
-    "test:storybook:standalone:report": "pnpm run test:storybook:prepare && concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook:report\"",
+    "test:storybook:standalone": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook\"",
+    "test:storybook:standalone:report": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook:report\"",
     "lint": "pnpm run lint:tsc && pnpm run lint:eslint",
     "lint:report": "pnpm run lint:tsc:report && pnpm run lint:eslint:report",
     "lint:fix": "pnpm run lint:eslint:fix",
