ci: don't run test prepare script as part of test script, because it fails on ci

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -27,9 +27,9 @@
     "test": "pnpm run test:storybook:standalone",
     "test:report": "pnpm run test:storybook:standalone:report",
     "test:storybook:prepare": "pnpm exec playwright install --with-deps",
-    "test:storybook": "pnpm run test:storybook:prepare && test-storybook",
-    "test:storybook:watch": "pnpm run test:storybook:prepare && test-storybook --watch",
-    "test:storybook:report": "pnpm run test:storybook:prepare && JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
+    "test:storybook": "test-storybook",
+    "test:storybook:watch": "test-storybook --watch",
+    "test:storybook:report": "JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
     "test:storybook:standalone": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook\"",
     "test:storybook:standalone:report": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook:report\"",
     "lint": "pnpm run lint:tsc && pnpm run lint:eslint",
