--- a/apps/nextjs-example/package.json
+++ b/apps/nextjs-example/package.json
@@ -28,10 +28,10 @@
     "test": "pnpm run test:playwright",
     "test:report": "pnpm run test:playwright:report",
     "test:playwright:prepare": "pnpm exec playwright install --with-deps",
-    "test:playwright": "pnpm run test:playwright:prepare && PLAYWRIGHT_HTML_REPORT=./reports/test-report-playwright playwright test --reporter=html",
-    "test:playwright:ui": "pnpm run test:playwright:prepare && playwright test --ui",
-    "test:playwright:show": "pnpm run test:playwright:prepare && playwright show-report ./reports/test-report-playwright",
-    "test:playwright:report": "pnpm run test:playwright:prepare && PLAYWRIGHT_JUNIT_OUTPUT_NAME=./reports/test-report-playwright.xml playwright test --reporter junit",
+    "test:playwright": "PLAYWRIGHT_HTML_REPORT=./reports/test-report-playwright playwright test --reporter=html",
+    "test:playwright:ui": "playwright test --ui",
+    "test:playwright:show": "playwright show-report ./reports/test-report-playwright",
+    "test:playwright:report": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=./reports/test-report-playwright.xml playwright test --reporter junit",
     "lint": "pnpm run lint:tsc && pnpm run lint:eslint && pnpm run lint:stylelint",
     "lint:report": "pnpm run lint:tsc:report && pnpm run lint:eslint:report && pnpm run lint:stylelint:report",
     "lint:fix": "pnpm run lint:eslint:fix && pnpm run lint:stylelint:fix",
