--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
           cache: "pnpm"
           registry-url: "https://registry.npmjs.org"
       - run: pnpm install
+      - run: pnpm exec playwright install --with-deps
       - run: pnpm run build
       - run: pnpm run lint:report
       - run: pnpm run test:report
