--- a/apps/react-example/package.json
+++ b/apps/react-example/package.json
@@ -20,9 +20,9 @@
   ],
   "packageManager": "pnpm@8.14.1",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite dev --port 3001",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --port 3101",
     "test": "pnpm run test:vitest",
     "test:report": "pnpm run test:vitest:report",
     "test:vitest": "vitest run",
