--- a/apps/nextjs-example/tsconfig.json
+++ b/apps/nextjs-example/tsconfig.json
@@ -4,15 +4,15 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "contentlayer/generated": ["./.contentlayer/generated"]
-    }
+      "contentlayer/generated": ["./.contentlayer/generated"],
+    },
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".contentlayer/generated"
+    ".contentlayer/generated",
   ],
-  "exclude": ["**/*.test.{ts,tsx}"]
+  "exclude": ["**/*.test.{ts,tsx}"],
 }
