--- a/packages/style/tsconfig.json
+++ b/packages/style/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "@themeless-ui/typescript-config/vite-react.json",
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts"],
 }
