test: fix tests to use the new ports doc: add instruction to run tests preparations

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -25,13 +25,14 @@
     "build": "storybook build",
     "preview": "serve -p 3100 storybook-static",
     "test": "pnpm run test:storybook:standalone",
+    "test:prepare": "pnpm run test:storybook:prepare",
     "test:report": "pnpm run test:storybook:standalone:report",
     "test:storybook:prepare": "pnpm exec playwright install --with-deps",
-    "test:storybook": "test-storybook",
-    "test:storybook:watch": "test-storybook --watch",
-    "test:storybook:report": "JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --junit",
-    "test:storybook:standalone": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook\"",
-    "test:storybook:standalone:report": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 6006 storybook-static\" \"wait-on tcp:6006 && pnpm run test:storybook:report\"",
+    "test:storybook": "test-storybook --url http://localhost:3000",
+    "test:storybook:watch": "test-storybook --url http://localhost:3000 --watch",
+    "test:storybook:report": "JEST_JUNIT_OUTPUT_FILE=./reports/test-report-storybook.xml test-storybook --url http://localhost:3000 --junit",
+    "test:storybook:standalone": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 3000 storybook-static\" \"wait-on tcp:3000 && pnpm run test:storybook\"",
+    "test:storybook:standalone:report": "concurrently -k -s first -n SB,TEST -c magenta,blue \"pnpm run build --quiet && pnpm exec serve -Lp 3000 storybook-static\" \"wait-on tcp:3000 && pnpm run test:storybook:report\"",
     "lint": "pnpm run lint:tsc && pnpm run lint:eslint",
     "lint:report": "pnpm run lint:tsc:report && pnpm run lint:eslint:report",
     "lint:fix": "pnpm run lint:eslint:fix",
