--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,7 @@
       "dependsOn": ["^build"]
     },
     "test": {},
+    "test:prepare": {},
     "test:report": {
       "outputs": ["reports/**"]
     },
